tests/fixtures/invalid/bool_bitxor_float.py
# Cannot bitwise XOR Bool and Float
x: float = True ^ 1.0
